flux-modules/extras/paperless/deploy/paperless-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-route
spec:
  parentRefs:
    - name: cilium-gw
      namespace: kube-system
  hostnames:
    - "YOUR_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ngx
          port: 8000
